backend/api/JavaApi/src/main/kubefiles/node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: java-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: api
    namespace: java-api
